--- a/package.json
+++ b/package.json
@@ -1,29 +1,25 @@
 {
   "name": "adaste-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 next dev --no-turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "NODE_OPTIONS='--no-wasm-code-gc' NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next dev --hostname 0.0.0.0 --port 3000",
+    "build": "NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next build",
+    "start": "NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next start -p 10000"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest"
+    "next": "16.0.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "latest",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "autoprefixer": "latest",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "postcss": "latest",
-    "tailwindcss": "latest",
-    "typescript": "latest"
+    "autoprefixer": "10.4.19",
+    "eslint": "8.57.0",
+    "eslint-config-next": "14.2.3",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.3"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
-
