--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--no-wasm-code-gc' NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next dev --hostname 0.0.0.0 --port 3000",
-    "build": "NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next build",
-    "start": "NEXT_RUNTIME=classic NEXT_DISABLE_TURBOPACK=1 NEXT_DISABLE_SWC=1 next start -p 10000"
+    "dev": "NEXT_RUNTIME=classic NEXT_DISABLE_SWC=1 NEXT_TELEMETRY_DISABLED=1 node --no-wasm-code-gc node_modules/next/dist/bin/next dev --hostname 0.0.0.0 --port 3000",
+    "build": "NEXT_RUNTIME=classic NEXT_DISABLE_SWC=1 NEXT_TELEMETRY_DISABLED=1 node --no-wasm-code-gc node_modules/next/dist/bin/next build",
+    "start": "NEXT_RUNTIME=classic NEXT_DISABLE_SWC=1 NEXT_TELEMETRY_DISABLED=1 node --no-wasm-code-gc node_modules/next/dist/bin/next start -p 10000"
   },
   "dependencies": {
-    "next": "16.0.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "next": "15.1.6",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "devDependencies": {
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "postcss": "8.4.33",
-    "tailwindcss": "3.4.3"
+    "tailwindcss": "3.4.3",
+    "typescript": "^5.6.3"
   },
   "engines": {
     "node": ">=18.x"
