--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "NEXT_RUNTIME=classic NEXT_DISABLE_SWC=1 NEXT_TELEMETRY_DISABLED=1 node --no-wasm-code-gc node_modules/next/dist/bin/next dev --hostname 0.0.0.0 --port 3000",
     "build": "NEXT_RUNTIME=classic NEXT_DISABLE_SWC=1 NEXT_TELEMETRY_DISABLED=1 node --no-wasm-code-gc node_modules/next/dist/bin/next build",
@@ -18,11 +17,11 @@
     "@tailwindcss/postcss": "^4.1.17",
     "@types/node": "^20.12.7",
     "@types/react": "^18.3.3",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "^10.4.22",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
-    "postcss": "8.4.33",
-    "tailwindcss": "3.4.3",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.6.3"
   },
   "engines": {
